--- a/pages/eom_2_unit/custom_page/7/index.html
+++ b/pages/eom_2_unit/custom_page/7/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="main_wrapper">
         
-        <p>COBIT (Control Objectives for Information and Related Technologies) – это фреймворк для управления и управления информационными технологиями (ИТ), который помогает организациям достигать бизнес-целей через эффективное управление ИТ. Он предоставляет набор принципов, целей и лучших практик для оптимизации управления ИТ.</p>
+        <p>COBIT (Control Objectives for Information and Related Technologies) – это фреймворк для управления информационными технологиями (ИТ), который помогает организациям достигать бизнес-целей через эффективное управление ИТ. Он предоставляет набор принципов, целей и лучших практик для оптимизации управления ИТ.</p>
         <div class="text_with_image_custom">
             <div class="text_left_custom w100">
                 <b class="w100">Принципы COBIT</b>
