--- a/pages/eom_3_unit/eom_3_mini_game/index.html
+++ b/pages/eom_3_unit/eom_3_mini_game/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
     <script src="./script/Sortable.js" defer></script>
-    <script src="../../../data/data_main_p.js"></script>
+    <script src="./script/data_main_p.js"></script>
     <script src="./script/create-elements.js" defer></script>
     <script src="./script/main.js" defer></script>
-    <script src="../../../data/data_eom_3_mg.js" defer></script>
+    <script src="./script/data_eom_3_mg.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.1.2/dist/svg.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.draggable.js@3.0.3/dist/svg.draggable.min.js"></script>
     <link type="Image/x-icon" href="../../../content/favicon.ico" rel="icon">
