--- a/pages/eom_2_unit/custom_page/1/index.html
+++ b/pages/eom_2_unit/custom_page/1/index.html
@@ -169,16 +169,16 @@
         </div>
     </div>
     <div class="wrapper_div_custom">
-        <h3>Премьерные организации по стандартизации</h3>
+        <h3>Примеры организации по стандартизации</h3>
         <ul>
             <li>
-                <strong>ISO (International Organization for Standardization)</strong> — международная организация, разрабатывающая стандарты в различных областях.
+                <strong>ISO (International Organization for Standardization)</strong> – международная организация, разрабатывающая стандарты в различных областях.
             </li>
             <li>
-                <strong>IEC (International Electrotechnical Commission)</strong> — международная комиссия, занимающаяся стандартами в области электротехники и электроники.
+                <strong>IEC (International Electrotechnical Commission)</strong> – международная комиссия, занимающаяся стандартами в области электротехники и электроники.
             </li>
             <li>
-                <strong>ГОСТ (Государственные стандарты России)</strong> — система стандартов, разработанных и утверждённых в России.
+                <strong>ГОСТ (Государственные стандарты России)</strong> – система стандартов, разработанных и утверждённых в России.
             </li>
         </ul>
         <p>
