--- a/pages/eom_2_unit/custom_page/3/index.html
+++ b/pages/eom_2_unit/custom_page/3/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="main_wrapper">
+
         <table class="iksweb">
             <tbody>
                 <tr>
@@ -79,6 +80,11 @@
                 </tr>
             </tbody>
         </table>
+        <div style="margin-top: 25px;">
+            <b>Основные правила оформления текстовых документов по ГОСТ 2.105-95</b><br>
+            <br>
+            <p>Оформление текстовых документов по ГОСТ 2.105-95 «Единая система конструкторской документации (ЕСКД). Общие требования к текстовым документам» требует соблюдения определённых правил, которые обеспечивают единообразие и читаемость документации. Эти правила охватывают различные аспекты создания текстовых документов, таких как пояснительные записки, инструкции и руководства. Ниже приведены основные правила оформления текстового документа по ГОСТ 2.105-95.</p>
+        </div>
         <div class="text_with_image_custom">
             <div class="text_left_custom">
                 <h3>1. Общие требования к оформлению текста (рис. 1):</h3>
@@ -102,7 +108,7 @@
                 <h3>4. Разделы и подразделы:</h3>
                 <p>Разделы документа должны иметь заголовки, которые записываются заглавными буквами без точки в конце.</p>
                 <p>Подразделы могут иметь нумерацию, например, 1.1, 1.2 и так далее, и оформляются строчными буквами с первой заглавной, также без точки в конце.</p>
-                <p>Нельзя начинать раздел или подраздел с таблицы, иллюстрации или формулы — перед ними обязательно должен быть текст.</p>
+                <p>Нельзя начинать раздел или подраздел с таблицы, иллюстрации или формулы – перед ними обязательно должен быть текст.</p>
                 <h3>5. Оформление текста:</h3>
                 <p><b>Абзацы:</b> Каждый абзац текста начинается с отступа (обычно 1,25 см). Абзацы используются для выделения основной мысли или идеи в тексте.</p>
                 <p><b>Нумерация:</b> В тексте используются арабские цифры для нумерации пунктов, подпунктов и перечислений. Перечисления могут быть оформлены с использованием букв или цифр в круглых скобках.</p>
@@ -112,11 +118,11 @@
         <div class="text_with_image_custom">
             <div class="text_left_custom">
                 <h3>6. Оформление таблиц (рис. 2):</h3>
-                <p><b>Расположение и нумерация: </b>Таблицы в документе нумеруются последовательно арабскими цифрами в пределах всего документа или каждого раздела. Название таблицы пишется над ней, например, «Таблица 1 — Название таблицы».</p>
+                <p><b>Расположение и нумерация: </b>Таблицы в документе нумеруются последовательно арабскими цифрами в пределах всего документа или каждого раздела. Название таблицы пишется над ней, например, «Таблица 1 – Название таблицы».</p>
                 <p><b>Оформление содержимого: </b>Таблицы должны быть компактными и содержать минимум необходимой информации. Внутренние границы таблиц можно не показывать, если это не ухудшает читаемость.</p>
                 <p><b>Ссылки: </b>Ссылки на таблицы делаются с указанием номера таблицы, например, «см. таблицу 2».</p>
                 <h3>7. Оформление иллюстраций (рисунков, графиков, схем):</h3>
-                <p><b>Нумерация и подписи: </b>Иллюстрации нумеруются последовательно по всему документу или внутри раздела и снабжаются подписями, например, «Рисунок 1 — Схема процесса».</p>
+                <p><b>Нумерация и подписи: </b>Иллюстрации нумеруются последовательно по всему документу или внутри раздела и снабжаются подписями, например, «Рисунок 1 – Схема процесса».</p>
                 <p><b>Расположение: </b>Иллюстрации размещаются непосредственно после текста, в котором на них делается ссылка, или на следующей странице.</p>
                 <p><b>Качество: </b>Иллюстрации должны быть четкими и легко читаемыми, выполнены на стандартном белом фоне без излишних украшений.</p>
             </div>
@@ -129,13 +135,13 @@
             <div class="text_left_custom w100">
                 <h3>8. Оформление формул:</h3>
                 <p><b>Расположение и нумерация: </b>Формулы располагаются на отдельной строке, выравниваются по центру, и пронумерованы арабскими цифрами в круглых скобках, например, (1), в крайнем правом положении строки.</p>
-                <p><b>Пояснения: </b>Все переменные и символы, использованные в формуле, должны быть пояснены сразу после неё, например, «где a — ускорение (м/с<sup>2</sup>)».</p>
+                <p><b>Пояснения: </b>Все переменные и символы, использованные в формуле, должны быть пояснены сразу после неё, например, «где a – ускорение (м/с<sup>2</sup>)».</p>
                 <h3>9. Оформление списка использованных источников:</h3>
                 <p>Список литературы оформляется согласно требованиям библиографического описания, ссылки в тексте оформляются в квадратных скобках с указанием номера источника по списку.</p>
                 <h3>10. Приложения:</h3>
                 <p>Приложения оформляются на отдельных листах и располагаются в порядке ссылок на них в тексте. Каждое приложение должно иметь заголовок и нумерацию.</p>
-                <p>Эти правила обеспечивают стандартизацию текстовых документов, их структурированность и удобочитаемость, что способствует эффективному использованию и распространению технической информации в рамках проектной и конструкторской деятельности.</p>
-                <p class="blue_paragraph">Назначение ГОСТ 2.105-95</p>
+                <p>Эти правила обеспечивают стандартизацию текстовых документов, их структурированность и удобочитаемость, что способствует эффективному использованию и распространению технической информации в рамках проектной и конструкторской деятельности.</p><br>
+                <p class="blue_paragraph">Назначение ГОСТ 2.105-95</p><br>
                 <p>Этот стандарт направлен на обеспечение единообразия и качества текстовых документов в конструкторской деятельности. Он способствует повышению читаемости, точности и понимания технических документов, а также облегчает их разработку и использование как в бумажном, так и в электронном виде. Соблюдение стандартов снижает вероятность ошибок и недоразумений при создании, чтении и применении технической документации, что важно для координации работы в проектных и конструкторских организациях.</p>
             </div>
         </div>
