--- a/pages/eom_2_unit/custom_page/5/index.html
+++ b/pages/eom_2_unit/custom_page/5/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="main_wrapper">
         <div class="first_custom">
-            <p>Стандарт ISO/IEC 27001 — это международный стандарт, который описывает требования к системе управления информационной безопасностью (СУИБ). Его основная цель — защитить информацию в организации, минимизируя риски, связанные с утечками и угрозами.</p>
+            <p>Стандарт ISO/IEC 27001 – это международный стандарт, который описывает требования к системе управления информационной безопасностью (СУИБ). Его основная цель – защитить информацию в организации, минимизируя риски, связанные с утечками и угрозами.</p>
         </div>
         <div class="second_custom">
             <b>Вот ключевые цели и требования стандарта:</b><br><br>
@@ -190,7 +190,7 @@
                 </div>
             </div>
             <div class="fifth_custom">
-                <p>Внедрение ISO/IEC 27001 — это непрерывный процесс, требующий постоянного внимания и улучшений. Регулярное обновление и пересмотр СУИБ помогут поддерживать ее соответствие меняющимся требованиям и угрозам в области информационной безопасности.</p><br>
+                <p>Внедрение ISO/IEC 27001 – это непрерывный процесс, требующий постоянного внимания и улучшений. Регулярное обновление и пересмотр СУИБ помогут поддерживать ее соответствие меняющимся требованиям и угрозам в области информационной безопасности.</p><br>
             </div>
         </div>
     </div>
