--- a/pages/eom_2_unit/custom_page/6/index.html
+++ b/pages/eom_2_unit/custom_page/6/index.html
@@ -36,10 +36,10 @@
                 <p class="no_margin">Определяют конкретные тесты, которые будут выполняться. Они включают:</p>
                 <div class="list_wrapper_custom">
                     <ul>
-                        <li>Идентификаторы тестов</li>
-                        <li>Описание тестов</li>
-                        <li>Предусловия и постусловия</li>
-                        <li>Ожидаемые результаты</li>
+                        <li>Идентификаторы тестов;</li>
+                        <li>Описание тестов;</li>
+                        <li>Предусловия и постусловия;</li>
+                        <li>Ожидаемые результаты.</li>
                     </ul>
                 </div>
             </div>
@@ -50,10 +50,10 @@
                 <p class="no_margin">Документируют результаты тестирования и любые выявленные дефекты. Отчеты могут включать:</p>
                 <div class="list_wrapper_custom">
                     <ul class="no_margin">
-                        <li>Общее количество проведенных тестов</li>
-                        <li>Количество успешных и неуспешных тестов</li>
-                        <li>Перечень выявленных дефектов</li>
-                        <li>Рекомендации по улучшению</li>
+                        <li>Общее количество проведенных тестов;</li>
+                        <li>Количество успешных и неуспешных тестов;</li>
+                        <li>Перечень выявленных дефектов;</li>
+                        <li>Рекомендации по улучшению.</li>
                     </ul>
                 </div>
             </div>
