--- a/pages/eom_2_unit/custom_page/7/index.html
+++ b/pages/eom_2_unit/custom_page/7/index.html
@@ -12,6 +12,7 @@
         <p>COBIT (Control Objectives for Information and Related Technologies) – это фреймворк для управления информационными технологиями (ИТ), который помогает организациям достигать бизнес-целей через эффективное управление ИТ. Он предоставляет набор принципов, целей и лучших практик для оптимизации управления ИТ.</p>
         <div class="text_with_image_custom">
             <div class="text_left_custom w100">
+                <br>
                 <b class="w100">Принципы COBIT</b>
             </div>
         </div>
@@ -19,7 +20,7 @@
             <div class="list_object_custom">
                 <div class="main_list_wrapper">
                     <div class="list_text_custom first_color">
-                        <b>Повышение осведомленности и культуры безопасности</b>
+                        <b>Соответствие бизнес-целям</b>
                         <div class="upper_line first_color"> </div>
                     </div>
                     <div class="text_with_marker_custom">
@@ -111,7 +112,7 @@
                 <div class="color_part_right_custom third_color"> </div>
             </div>
         </div>
-        <p class="blue_paragraph">Стандарт IEEE 829 и тестовая документация</p>
+        <p class="blue_paragraph">Лучшие практики COBIT</p>
         <ol>
             <li><strong>Определение и управление целями:</strong> ясное определение целей управления ИТ, соответствующих бизнес-целям, и их регулярное обновление.</li>
             <li><strong>Создание и внедрение стандартов и политик:</strong> разработка и внедрение стандартов, политик и процедур для управления ИТ-процессами.</li>
