--- a/pages/eom_2_unit/custom_page/2/index.html
+++ b/pages/eom_2_unit/custom_page/2/index.html
@@ -85,6 +85,14 @@
                 </ul>
             </div>
         </div>
+            <ol style="font-size: clamp(16px, 1.5vw, 25px); margin-top: 50px;">
+                <b style="margin-left: -25px; margin-bottom: 15px;">Цели Федерального закона «О техническом регулировании»</b><br><br>
+                <li style="margin-bottom: 5px;">Защита жизни и здоровья людей – установление обязательных требований для предотвращения опасностей, связанных с продукцией и услугами.</li>
+                <li style="margin-bottom: 5px;">Обеспечение охраны окружающей среды – минимизация негативного воздействия продукции и услуг на природу.</li>
+                <li style="margin-bottom: 5px;">Повышение экономической эффективности и конкурентоспособности – упрощение процедур выхода продукции на рынок, стимулирование инноваций и повышение качества продукци.</li>
+                <li style="margin-bottom: 5px;">Создание прозрачной и предсказуемой системы регулирования – снижение административных барьеров и коррупционных рисков через четкое определение требований и процедур.</li>
+                <li style="margin-bottom: 5px;"> Гармонизация с международными стандартами – повышение уровня соответствия российских стандартов международным нормам для упрощения торговли и экспорта. <br> Закон «О техническом регулировании» является ключевым элементом системы стандартизации в России, направленным на повышение безопасности и качества продукции и услуг, а также на интеграцию России в международное экономическое пространство.</li>
+            </ol>
     </div>
 </body>
 </html>
