--- a/pages/eom_2_unit/custom_page/3/index.html
+++ b/pages/eom_2_unit/custom_page/3/index.html
@@ -81,9 +81,9 @@
             </tbody>
         </table>
         <div style="margin-top: 25px;">
-            <b>Основные правила оформления текстовых документов по ГОСТ 2.105-95</b><br>
-            <br>
-            <p>Оформление текстовых документов по ГОСТ 2.105-95 «Единая система конструкторской документации (ЕСКД). Общие требования к текстовым документам» требует соблюдения определённых правил, которые обеспечивают единообразие и читаемость документации. Эти правила охватывают различные аспекты создания текстовых документов, таких как пояснительные записки, инструкции и руководства. Ниже приведены основные правила оформления текстового документа по ГОСТ 2.105-95.</p>
+           
+            <p>Оформление текстовых документов по ГОСТ 2.105-95 «Единая система конструкторской документации (ЕСКД). Общие требования к текстовым документам» требует соблюдения определённых правил, которые обеспечивают единообразие и читаемость документации. Эти правила охватывают различные аспекты создания текстовых документов, таких как пояснительные записки, инструкции и руководства. Ниже приведены основные правила оформления текстового документа по ГОСТ 2.105-95.</p><br>
+            <b>Основные правила оформления текстовых документов по ГОСТ 2.105-95</b>
         </div>
         <div class="text_with_image_custom">
             <div class="text_left_custom">
