--- a/pages/eom_2_unit/custom_page/4/index.html
+++ b/pages/eom_2_unit/custom_page/4/index.html
@@ -105,9 +105,9 @@
             Соответствие этим требованиям может увеличить стабильность и безопасность связи, что важно для бизнес-процессов.
             </p>
             <br>
-            <p><b>Технический регламент о средствах безопасности связи:</b></p>
-            <p  class="prop_list_custom_nine_eleven">Устанавливает требования к оборудованию и ПО в области связи, обеспечивая защиту от угроз, связанных с использованием телекоммуникационных технологий. <br>
-            Соответствие этим требованиям может увеличить стабильность и безопасность связи, что важно для бизнес-процессов.
+            <p><b>•	Технический регламент по безопасности программного обеспечения:</b></p>
+            <p  class="prop_list_custom_nine_eleven">Определяет оценку рисков и защиту от долгосрочных воздействий, включая защиту от вредоносного ПО.
+                Эффективное управление инцидентами и восстановление после атак позволяет минимизировать простои и финансовые потери.                
             </p>
         </div>
         <div style="text-align: center;">
