--- a/pages/eom_2_unit/custom_page/7/index.html
+++ b/pages/eom_2_unit/custom_page/7/index.html
@@ -112,6 +112,54 @@
                 <div class="color_part_right_custom third_color"> </div>
             </div>
         </div>
+        <div class="table_custom">
+            <div class="list_object_custom">
+                <div class="main_list_wrapper">
+                    <div class="list_text_custom fourth_color">
+                        <b>Прозрачность и отчетность</b>
+                        <div class="upper_line fourth_color"> </div>
+                    </div>
+                    <div class="text_with_marker_custom">
+                        <div class="marker_custom fourth_color">
+                            <div class="circle_custom fourth_color">
+                                <div>
+                                    <span class="fourth_color">05</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="text_content_custom">
+                            <div>
+                                Обеспечение ясности в процессах управления ИТ и подотчетности всех участников
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="color_part_right_custom fourth_color"> </div>
+            </div>
+            <div class="list_object_custom">
+                <div class="main_list_wrapper">
+                    <div class="list_text_custom eight_color">
+                        <b>Устойчивость к изменениям</b>
+                        <div class="upper_line eight_color"> </div>
+                    </div>
+                    <div class="text_with_marker_custom">
+                        <div class="marker_custom eight_color">
+                            <div class="circle_custom eight_color">
+                                <div>
+                                    <span class="eight_color">06</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="text_content_custom">
+                            <div>
+                                Способность организации адаптироваться к изменениям во внешней и внутренней среде
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="color_part_right_custom eight_color"> </div>
+            </div>
+        </div>
         <p class="blue_paragraph">Лучшие практики COBIT</p>
         <ol>
             <li><strong>Определение и управление целями:</strong> ясное определение целей управления ИТ, соответствующих бизнес-целям, и их регулярное обновление.</li>
